Added another event page

--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -12,6 +12,7 @@
     <p>Hello, {{user.firstName}} {{user.lastName}}!</p>
     <button ng-show="user.isAdmin" ng-click="adminPanel()">Admin Panel</button>
     <button ng-click="logout()">Logout</button>
+    <button ng-click="eventPage()">Event Page</button>
     <br>
     <br>
     <div>
