--- a/client/app/views/event.html
+++ b/client/app/views/event.html
@@ -59,7 +59,7 @@
           </div>
           <div class="choose-arrival">
             <span class="bi bi-check2-all"></span>
-            <span class="line-arrival" ng-click="navigateHome()">
+            <span class="line-arrival">
               <span class="arrival-word">Confirmed arrival</span>
               <span class="bi bi-chevron-down"></span>
             </span>
