Fixed mini rectangle bottom

--- a/client/app/views/event.html
+++ b/client/app/views/event.html
@@ -81,7 +81,7 @@
       <div class="custom-color-circle" ng-style="{'background-color': white}">
         <p class="bi-plus"></p>
       </div>
-      <div class="mini-rectangle-bottom"></div>
+      <div class="mini-rectangle-bottom-color"></div>
     </div>
 
     <div class="text-menu" ng-show="showTextMenu">
@@ -119,7 +119,7 @@
         </form>
       </div>
 
-      <div class="mini-rectangle-bottom"></div>
+      <div class="mini-rectangle-bottom-text"></div>
     </div>
   </div>
 </body>
